# sveetch-python-sample

./: CHANGELOG.rst  LICENCE.txt  Makefile  README.rst  cookiebaked.json  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
docs/: cli.rst  conf.py  development.rst  history.rst  index.rst  install.rst  requirements.txt  sphinx_reload.py
docs/core/: exceptions.rst  hello.rst  logger.rst
docs/references/: exceptions.rst  hello.rst  index.rst  logger.rst
sample/: __init__.py  exceptions.py  hello.py
sample/cli/: entrypoint.py  greet.py  version.py
tests/: conftest.py
tests/001_hello/: 001_hello_base.py  02_hello_html.py
tests/100_cli/: 001_cli_version.py  010_greet.py
