;;
;; Sveetch Python sample package
;;
[metadata]
name = sveetch-python-sample
version = 0.1.0
description = A project example created from cookiecutter-sveetch-python.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/sveetch-python-sample
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    click>=7.0,<8.0
    colorama
    colorlog
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    sphinx
    sphinx-rtd-theme
    livereload
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    sample = sample.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py35

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
